--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "marked": "^0.7.0",
     "ngx-quill": "^7.3.7",
+    "ngx-timeago": "^1.0.3",
     "ngx-toastr": "^11.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
