--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -23,22 +23,11 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
-    "@ngrx/effects": "^8.3.0",
-    "@ngrx/entity": "^8.3.0",
-    "@ngrx/router-store": "^8.3.0",
-    "@ngrx/store": "^8.3.0",
-    "@ngrx/store-devtools": "^8.3.0",
     "angular-material-fileupload": "^2.0.0",
-    "apollo-angular": "^1.7.0",
-    "apollo-angular-link-http": "^1.6.0",
-    "apollo-cache-inmemory": "^1.3.2",
-    "apollo-client": "^2.6.0",
-    "apollo-link": "^1.2.11",
     "bootstrap": "^4.3.1",
-    "graphql": "^14.3.1",
-    "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "marked": "^0.7.0",
+    "mat-progress-buttons": "^8.0.7",
     "ngx-quill": "^7.3.7",
     "ngx-timeago": "^1.0.3",
     "ngx-toastr": "^11.0.0",
@@ -53,11 +42,11 @@
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
     "@ngrx/schematics": "^8.3.0",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "graphql-code-generator": "^0.18.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
